se agregaron archivos de correo y Estilos

--- a/encabezadoQ.html
+++ b/encabezadoQ.html
@@ -2,9 +2,18 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Encabezadogit </title>
+    <title>Encabezado </title>
+    <link rel="stylesheet" href="CSS/EstilosQ.CSS">
 </head>
+
 <body>
+    <nav>
+        <img src="IMS\quali.svg" alt="Quali">
+        <div>
+            <a href="#">Productos</a>
+            <a href="#">Ubicacion</a>
+        </div>
+    </nav>
     
 </body>
 </html>
